# Particle-System-OpenGL

./: CMakeLists.txt
src/: instanced_cube.hpp  main.cpp  renderer.hpp  scene_definition.hpp
